--- a/src/index.html
+++ b/src/index.html
@@ -7,21 +7,23 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="icon" href="favicon.ico">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
     <!-- Header -->
     <header>
         <div class="logo">Logotipo</div>
-        <div class="hamburger" onclick="toggleMenu()">
+        <div class="hamburger" id="hamburger">
             <div></div>
             <div></div>
             <div></div>
         </div>
-        <div class="menu nav-links">
+        <nav class="menu" id="menu">
             <a href="#contatos" class="menu-link">Contatos</a>
             <a href="#servicos" class="menu-link">Serviços</a>
-        </div>
+        </nav>
         <div class="icons">
             <a href="https://wa.me/yournumber" target="_blank"><i class="fab fa-whatsapp"></i></a>
             <a href="https://www.instagram.com/yourprofile" target="_blank"><i class="fab fa-instagram"></i></a>
@@ -29,21 +31,65 @@
         </div>
     </header>
 
-    <script>
-        // Função para abrir e fechar o menu hambúrguer
-        function toggleMenu() {
-            const navLinks = document.querySelector('.nav-links');
-            navLinks.classList.toggle('active');
-        }
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="hero-content">
+            <h1>Bem-vindo à Nossa Landing Page!</h1>
+            <p>Transforme suas ideias em resultados incríveis.</p>
+            <a href="#servicos" class="cta-button">Nossos Serviços</a>
+        </div>
+    </section>
 
-        // Animação de hover com efeito suave usando GSAP
-        const menuLinks = document.querySelectorAll('.menu-link');
-        menuLinks.forEach(link => {
-            link.addEventListener('mouseenter', () => {
-                gsap.to(link, { scale: 1.1, color: "#ff4081", duration: 0.3 });
-            });
-            link.addEventListener('mouseleave', () => {
-                gsap.to(link, { scale: 1, color: "#fff", duration: 0.3 });
+    <!-- Serviços Section -->
+    <section id="servicos" class="servicos">
+        <h2>Nossos Serviços</h2>
+        <div class="service-cards">
+            <div class="service-card">
+                <h3>Landing Page</h3>
+                <p>Oferecemos consultoria especializada para alavancar seu negócio.</p>
+                <span>R$ - R$</span>
+            </div>
+            <div class="service-card">
+                <h3>Landing Page Animada</h3>
+                <p>Criação de sites e soluções web de alto desempenho.</p>
+                <span>R$ - R$</span>
+            </div>
+            <div class="service-card">
+                <h3>Site Completo</h3>
+                <p>Estratégias para aumentar sua visibilidade online e atrair mais clientes.</p>
+                <span>R$ - R$</span>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contatos Section -->
+    <section id="contatos" class="contatos">
+        <h2>Entre em Contato</h2>
+        <form class="contact-form">
+            <input type="text" placeholder="Nome" required>
+            <input type="email" placeholder="Email" required>
+            <textarea placeholder="Mensagem" required></textarea>
+            <button type="submit">Enviar</button>
+        </form>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2025 Seu Nome. Todos os direitos reservados.</p>
+        <div class="social-icons">
+            <a href="https://wa.me/yournumber" target="_blank"><i class="fab fa-whatsapp"></i></a>
+            <a href="https://www.instagram.com/yourprofile" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/yourprofile" target="_blank"><i class="fab fa-linkedin"></i></a>
+        </div>
+    </footer>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            const hamburger = document.getElementById("hamburger");
+            const menu = document.getElementById("menu");
+
+            hamburger.addEventListener("click", function() {
+                menu.classList.toggle("active");
             });
         });
     </script>
